<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Tappedout.net">
        <CheckBoxPreference
            android:title="Search My Decks Only"
            android:summary="Enable to Get Decks Only From Your Account"
            android:key="@string/user_name_enabled"
            android:defaultValue="false"/>
        <EditTextPreference
            android:title="UserName"
            android:summary="Tappeodut.net UserName"
            android:key="@string/user_name"
            android:dependency="@string/user_name_enabled"  />
        <ListPreference
            android:title="Automatic Sync Schedule"
            android:summary="Select How Often the Decks Should Be Automatically Synced"
            android:key="@string/sync_schedule"
            android:entries="@array/preferenceList"
            android:entryValues="@array/preferenceList"/>
        <EditTextPreference
            android:title="Set Tutor Flags"
            android:defaultValue="true"
            android:summary="Automatically Set Flags for Cards That Need Search Criteria Defined"
            android:key="@string/tutor_flags_enabled"  />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="System">
        <EditTextPreference
            android:title="Enable Sound Effects"
            android:key="@string/sound_effects_enabled"
            android:defaultValue="true" />
        <ListPreference
            android:title="Connection Type"
            android:summary="Set the Connection Type Used for Background Tasks"
            android:key="@string/connection_type"
            android:entries="@array/connectionTypeList"
            android:entryValues="@array/connectionTypeList"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Notifications">
        <EditTextPreference
            android:title="Deck Loaded Notification"
            android:summary="Send Notification When a Deck Has Finished Loading"
            android:key="@string/deck_loaded_notification"
            android:defaultValue="false"  />
        <EditTextPreference
            android:title="Deck Searching Notification"
            android:summary="Send Notification When Starting A Background Task"
            android:key="@string/deck_searching_notification"
            android:defaultValue="false"  />
    </PreferenceCategory>
</PreferenceScreen>